--- a/style.css
+++ b/style.css
@@ -132,7 +132,23 @@ footer {
 #about {
     font-size: 10px;
     text-align: left;
-    color: red;
+    opacity: .60;
+    color: black;
+}
+
+a:link {
+    color: black;
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #DDC488;
+    text-decoration: underline;
 }
 
 @media (max-width: 992px) {
