--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background: linear-gradient(to top, #6d44cc5d 0%, #f09cd880 100%);
+    background: linear-gradient(to top, #8f91495d 0%, #ff949480 100%);
     margin: 0;
     padding: 0;
 }
@@ -25,7 +25,7 @@ body {
     font-family: "Segoe UI", sans-serif;
     grid-template-columns: repeat(12, 1fr);
     grid-auto-rows: minmax(auto, auto);
-    color: #3e3e3e;
+    color: #000000;
     text-shadow: 0.4px 0.4px 0.4px rgba(0, 0, 0, .2);
 }
 
@@ -33,7 +33,7 @@ h1 {
     font-weight: lighter;
     grid-column: span 3;
     text-align: center;
-    color: #ec407a;
+    color: #ff0055;
 }
 
 #wrapper {
@@ -63,18 +63,26 @@ h1 {
 }
 
 date,
+month{
+    font-family: "Arial", sans-serif;
+    font-size: 18px;
+}
+year{
+    font-family: "Arial", sans-serif;
+    font-size: 18px;
+}
 time {
-    display: block;
+     display: block; 
 }
 
 date {
+    font-family: "Arial", sans-serif;
     font-size: 18px;
-}
 
 time {
     font-family: "Arial", sans-serif;
-    line-height: 3.2rem;
-    letter-spacing: 2px;
+    font-size: 18px;
+}
 }
 
 .avt {
@@ -148,7 +156,7 @@ a:visited {
 }
 
 a:hover {
-    color: #DDC488;
+    color: #00ffee;
     text-decoration: underline;
 }
 
